# maynard

./: .editorconfig  .gitignore  .gitmodules  README.md  configure.ac  maynard.in  meson.build
data/: meson.build  org.raspberrypi.maynard.gschema.xml
lib/: clock.c  clock.h  favorites.c  maynard.gresource.xml  meson.build  mnd-app-launcher.c  mnd-app-launcher.h  mnd-app-launcher.ui  mnd-app-list-model.c  mnd-app-list-model.h  mnd-favorites-button.c  mnd-favorites-button.h  mnd-favorites.c  mnd-favorites.h  mnd-launcher.c  mnd-launcher.h  mnd-launcher.ui  mnd-wallpaper.c  mnd-wallpaper.h  panel.c  panel.h  shell-app-system.c  shell-app-system.h  sound.h  style.css  vertical-clock.c  vertical-clock.h
lib/items/: mnd-clock.c  mnd-clock.h  mnd-panel-button.h  mnd-power.c  mnd-power.h  mnd-sound-popover.c  mnd-sound-popover.h  mnd-sound.c  mnd-sound.h
po/: meson.build
protocol/: meson.build
shell/: Makefile.am  app-icon.c  clock.c  clock.h  favorites.c  launcher.c  launcher.h  maynard.c  maynard.gresource.xml  meson.build  panel.c  panel.h  power.c  power.h  shell-app-system.c  shell-helper.c  sound.c  sound.h  style.css  vertical-clock.c
shell/items/: mnd-panel-button.c
src/: maynard.c  meson.build
src/helper/: meson.build
tools/: dummy-panel.c  meson.build
